--- a/.gitignore
+++ b/.gitignore
@@ -2441,7 +2441,7 @@ repl-temp-*
 !**/umbraco/Data/packages
 *.py[co]
 devdata.db
-data/*
+app/data/*
 *.egg
 *.egg-info
 dist
@@ -2691,13 +2691,13 @@ composer.phar
 vendor/
 config/autoload/*.local.php
 *.mo
-data/logs/
-data/cache/
-data/sessions/
-data/tmp/
+app/data/logs/
+app/data/cache/
+app/data/sessions/
+app/data/tmp/
 temp/
-data/DoctrineORMModule/Proxy/
-data/DoctrineORMModule/cache/
+app/data/DoctrineORMModule/Proxy/
+app/data/DoctrineORMModule/cache/
 demos/
 extras/documentation
 *~.xml
